--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,23 @@
-language: node_js 
+language: node_js
+
+sudo: required #is required to use docker service in travis
+
+language: php #can be any language, just php for example
+
+services:
+  - docker # required, but travis uses older version of docker :(
+
+install:
+  - echo "install nothing!" # put your normal pre-testing installs here
+
+script:
+  - echo "no tests!" # put your normal testing scripts here
+
+after_success:
+  - docker --version  # document the version travis is using
+  - pip install --user awscli # install aws cli w/o sudo
+  - export PATH=$PATH:$HOME/.local/bin # put aws in the path
+  - eval $(aws ecr get-login --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars and in ireland (eu-west-1)
+  - docker build -t nodetest.
+  - docker tag nodetest:latest 856093160330.dkr.ecr.us-east-1.amazonaws.com/nodetest:latest
+  - docker push 856093160330.dkr.ecr.us-east-1.amazonaws.com/nodetest:latest
