--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: node_js
-
 sudo: required #is required to use docker service in travis
+
+language: node_js
 
 language: php #can be any language, just php for example
 
@@ -19,5 +19,5 @@ after_success:
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
   - eval $(aws ecr get-login --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars and in ireland (eu-west-1)
   - docker build -t nodetest.
-  - docker tag nodetest:latest 856093160330.dkr.ecr.us-east-1.amazonaws.com/nodetest:latest
-  - docker push 856093160330.dkr.ecr.us-east-1.amazonaws.com/nodetest:latest
+  - docker tag nodetest:latest 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain/nodetest:latest
+  - docker push 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain/nodetest:latest
