--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ after_success:
   - pip install --user awscli # install aws cli w/o sudo
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
   - eval $(aws ecr get-login --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars and in ireland (eu-west-1)
-  - docker build -t nodetest.
+  - docker build -t nodetest:lastest.
   - docker tag nodetest:latest 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain/nodetest:latest
   - docker push 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain/nodetest:latest
