--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,44 @@
+#sudo: required #is required to use docker service in travis
+#
+#language: node_js
+#
+#language: php #can be any language, just php for example
+#
+#services:
+#  - docker # required, but travis uses older version of docker :(
+#
+#install:
+#  - echo "install nothing!" # put your normal pre-testing installs here
+#
+#script:
+#  - echo "no tests!" # put your normal testing scripts here
+#
+#after_success:
+#  - docker --version  # document the version travis is using
+#  - pip install --user awscli # install aws cli w/o sudo
+#  - export PATH=$PATH:$HOME/.local/bin # put aws in the path
+#  - eval $(aws ecr get-login --no-include-email --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars and in ireland (eu-west-1)
+#  - docker build -t supplychain .
+#  - docker tag supplychain:latest 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain:latest
+#  - docker push 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain:latest
+
 sudo: required #is required to use docker service in travis
 
 language: node_js
 
-language: php #can be any language, just php for example
-
+env:
+ - IMAGE_NAME=856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain:1.0-$TRAVIS_BUILD_NUMBER
 services:
-  - docker # required, but travis uses older version of docker :(
-
-install:
-  - echo "install nothing!" # put your normal pre-testing installs here
+  - docker
 
 script:
-  - echo "no tests!" # put your normal testing scripts here
+  - npm install
 
 after_success:
-  - docker --version  # document the version travis is using
-  - pip install --user awscli # install aws cli w/o sudo
-  - export PATH=$PATH:$HOME/.local/bin # put aws in the path
-  - eval $(aws ecr get-login --no-include-email --region eu-west-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars and in ireland (eu-west-1)
-  - docker build -t supplychain .
-  - docker tag supplychain:latest 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain:latest
-  - docker push 856093160330.dkr.ecr.eu-west-1.amazonaws.com/supplychain:latest
+  - pip install --user awscli 
+  - eval $(aws ecr get-login --region eu-west-1 --no-include-email)
+  - docker build -t 3r1co/nodetest .
+  - docker tag 3r1co/nodetest $IMAGE_NAME
+  - docker push $IMAGE_NAME
+  - aws cloudformation deploy --template-file ./ecs-task.yaml --stack-name ecs-deployment --region eu-west-1 --parameter-override ImageName=$IMAGE_NAME
+  - aws cloudformation update-stack --template-body file://./ecs-task.yaml --stack-name ecs-deployment --region eu-west-1 --parameters "ParameterKey=ImageName,ParameterValue=$IMAGE_NAME"
