--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ after_success:
   - pip install --user awscli 
   - eval $(aws ecr get-login --region eu-west-1 --no-include-email)
   - docker build -t 3r1co/nodetest .
-  - docker tag 3r1co/nodetest $IMAGE_NAME
+  - docker tag supplychain:latest $IMAGE_NAME
   - docker push $IMAGE_NAME
   - aws cloudformation deploy --template-file ./ecs-task.yaml --stack-name ecs-deployment --region eu-west-1 --parameter-override ImageName=$IMAGE_NAME
   - aws cloudformation update-stack --template-body file://./ecs-task.yaml --stack-name ecs-deployment --region eu-west-1 --parameters "ParameterKey=ImageName,ParameterValue=$IMAGE_NAME"
