--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ after_success:
   -curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   -chmod +x ./kubectl
   -sudo mv ./kubectl /usr/local/bin/kubectl 
-  -curl -o config https:https://github.com/marechal230eme/Supply-chain
+  #-curl -o config https:https://github.com/marechal230eme/Supply-chain
   -mkdir ${HOME}/.kube
   -cp config ${HOME}/.kube/config
  
