--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,8 @@ after_success:
   -mkdir ${HOME}/.kube
   -cp config ${HOME}/.kube/config
  
-  -kubectl config set clusters.kubernetes-group-1.certificate-authority-data "$KUBE_CLUSTER_CERTIFICATE"
-  -kubectl config set users.kubernetes-group-1-admin.username "$KUBE_CLIENT_CERTIFICATE"
-  -kubectl config set users.kubernetes-group-1-admin.password "$KUBE_CLIENT_KEY"
+  #-kubectl config set clusters.kubernetes-group-1.certificate-authority-data "$KUBE_CLUSTER_CERTIFICATE"
+  #-kubectl config set users.kubernetes-group-1-admin.username "$KUBE_CLIENT_CERTIFICATE"
+  #-kubectl config set users.kubernetes-group-1-admin.password "$KUBE_CLIENT_KEY"
 
   #-kubectl set image deployment/<deplyoment name> <deplyoment name>=<your docker registry>/<image name>:<version>
